[gd_scene load_steps=14 format=2]

[ext_resource path="res://Effect/MagicFire.png" type="Texture" id=1]
[ext_resource path="res://Player/Skill1Bullet.gd" type="Script" id=2]
[ext_resource path="res://Atta_Detect/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/PlayerDetectionZone.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 18.7792

[sub_resource type="CircleShape2D" id=2]
radius = 1200.0

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 0, 0.494118, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.988462, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 2.0
scale = 0.3
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="CircleShape2D" id=9]
radius = 19.1622

[node name="Skill1Bullet" type="KinematicBody2D"]
collision_layer = 384
collision_mask = 0
script = ExtResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
position = Vector2( -102.464, -58.0332 )
collision_mask = 8
enemy_damage = 0.0
is_skill1 = true

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 102.521, 59.4996 )
shape = SubResource( 1 )

[node name="EnemyDetectionZone" parent="." instance=ExtResource( 4 )]
position = Vector2( 1.12756, 5.15906 )
collision_mask = 16

[node name="CollisionShape2D" parent="EnemyDetectionZone" index="0"]
position = Vector2( -1.92215, 2.57608 )
shape = SubResource( 2 )

[node name="Despawn" type="Timer" parent="."]
wait_time = 13.0
one_shot = true
autostart = true

[node name="Start" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[node name="Effect" type="Node2D" parent="."]

[node name="Particles2D" type="Particles2D" parent="Effect"]
material = SubResource( 3 )
position = Vector2( 4.23174, 2.21801 )
amount = 50
lifetime = 1.2
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.388178, 0.745855 )
scale = Vector2( 0.901826, 0.935254 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.218006, 1.66338 )
shape = SubResource( 9 )
[connection signal="timeout" from="Despawn" to="." method="_on_Despawn_timeout"]
[connection signal="timeout" from="Start" to="." method="_on_Start_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hitbox"]

[editable path="EnemyDetectionZone"]
